# matchable

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
examples/: visualize.py
misc/: diagram.odp
src/matchable/: __init__.py  exceptions.py  match.py  spec.py
tests/: conftest.py  test_match.py  test_spec.py
