[tool.poetry]
name = "matchable"
version = "0.1"
description = "attribute-based object matching"
authors = ["Dominik1123"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dominik1123/matchable"
repository = "https://github.com/Dominik1123/matchable"
keywords = ["pattern", "matching", "pattern matching"]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^1.6.1", python = "<3.8"}
typing_extensions = {version = "^3.7.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.0"
mypy = "^0.780"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"
codecov = "^2.1.4"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["matchable"]
omit = ["src/matchable/__init__.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
